--- a/app/app.css
+++ b/app/app.css
@@ -8,16 +8,41 @@ ul {
 
 li {
     float: left;
+    border-right:1px solid #bbb;
 }
 
 li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 235px;
     text-decoration: none;
 }
 
 li a:hover {
     background-color: #111;
+}
+
+.converter {
+    width: 370px;
+    margin: 25px auto 0;
+    border: 1px solid #ccc;
+    padding: 5px 20px 20px;
+    border-radius: 5px;
+}
+
+.converter .label {
+    font-weight: 500;
+    font-size: 18px;
+    margin-bottom: 6px;
+}
+
+.converter-results {
+    font-size: 18px;
+    background-color: #e7f2fe;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    width: 360px;
+    height: 30px;
+    margin-top: 6px;
 }
